@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Feb 19 10:44:15 2002 -->
+<!-- Wed Feb 20 13:06:58 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -154,15 +154,25 @@ TARGET="Resource Window">Mandrake Linux</a> Contribs<br><br>
 <a href="http://www.gentoo.org/cgi-bin/viewcvs.cgi/gentoo-x86/net-mail/tmda/" 
 TARGET="Resource Window">(net-mail/tmda)</a><br><br>
 
-<li>TMDA is part of the NetBSD Packages collection
-<a href="ftp://ftp.netbsd.org/pub/NetBSD/packages/pkgsrc/mail/tmda/README.html"
+<li>*BSD ports/packages:<br><br>
+<ul>
+
+<li>NetBSD 
+<a href="ftp://ftp.NetBSD.org/pub/NetBSD/packages/pkgsrc/mail/tmda/README.html"
+TARGET="Resource Window">(mail/tmda)</a>
+<br>
+
+<li>OpenBSD
+<a href="http://www.OpenBSD.org/cgi-bin/cvsweb/ports/mail/tmda/"
+TARGET="Resource Window">(mail/tmda)</a>
+<br>
+
+<li>FreeBSD
+<a href="http://www.FreeBSD.org/cgi/cvsweb.cgi/ports/mail/tmda/" 
 TARGET="Resource Window">(mail/tmda)</a>
 <br><br>
 
-<li>TMDA is part of the FreeBSD "ports" collection
-<a href="http://www.freebsd.org/cgi/cvsweb.cgi/ports/mail/tmda/" 
-TARGET="Resource Window">(mail/tmda)</a>
-<br><br>
+</ul>
 </ul>
 
 <strong>NOTE:</strong> Packages maintained by extraneous parties may not be caught up
