@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Feb 19 10:16:31 2002 -->
+<!-- Wed Feb 20 13:10:02 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -154,7 +154,7 @@ Python</a>: an interpreted, interactive, object-oriented programming language.
 <li>Supports MUA-independent, site-wide installations using relay rewriting, including
     non-unix clients such as Microsoft Windows.<br><br>
 
-<li>Package installation available for Linux, FreeBSD, and NetBSD.<br><br>
+<li>Package installation available for Linux, and Free/Net/OpenBSD.<br><br>
 
 <li>Supports vpopmail and vmailmgr.<br><br>
 
