@@ -1,3 +1,9 @@
+2002-02-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* features.ht (Links): Mention OpenBSD port.
+
+	* download.ht: Link to OpenBSD port.
+
 2002-02-20  Tim Legant  <tim@catseye.net>
 
 	* config-filter.ht: Documented the new argument syntax for certain
